--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title> Periodic Table </title>
+        <link rel="stylesheet" href="public/style.css">
+        <link href="https://fonts.googleapis.com/css?family=Spectral+SC" rel="stylesheet">
+    </head>
+    <body>
+          <div class="header">
+                <div class="intro">
+                  <form>
+                        <input type="search" name="text " id="input"/>
+                        <button type="button" name="button" id="Search">Search</button>
+                    </form>
+                </div>
+              <select>
+                 <option value=""></option>
+              </select>
+              </div>
 
+</body>
+</html>
