--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
                  <option value=""></option>
               </select>
               </div>
+<script type="text/javascript" src="public/script.js">
 
+</script>
 </body>
 </html>
