--- a/public/index.html
+++ b/public/index.html
@@ -5,22 +5,17 @@
         <title> Periodic Table </title>
 
         <link rel="stylesheet" href="public/style.css">
-
+        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Spectral+SC" rel="stylesheet">
     </head>
     <body>
           <div class="header">
-                <div class="intro">
-
                   <form>
                         <input type="search" name="text " id="input"/>
                         <button type="button" name="button" id="Search">Search</button>
+                        <div id='search-menu'></div>
                     </form>
-                </div>
-              <select>
-                 <option value=""></option>
-              </select>
-              </div>
+            </div>
 <script type="text/javascript" src="public/script.js">
 
 </script>
