--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,10 @@
         <link href="https://fonts.googleapis.com/css?family=Spectral+SC" rel="stylesheet">
     </head>
     <body>
+        <!-- <h1 style="justify-content: center; flex-">Periodic Table</h1> -->
           <div class="header">
-                  <form>
+                  <form label='form'>
                         <input type="search" name="text " id="input"/>
-                        <button type="button" name="button" id="Search">Search</button>
                         <div id='search-menu'></div>
                     </form>
             </div>
