--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
         <title> Periodic Table </title>
 
         <link rel="stylesheet" href="public/style.css">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Spectral+SC" rel="stylesheet">
+        <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Spectral+SC" rel="stylesheet"> -->
     </head>
     <body>
         <!-- <h1 style="justify-content: center; flex-">Periodic Table</h1> -->
